--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "mean_maps",
+	"name": "mean-maps",
 	"description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js",
 	"version": "0.0.1",
 	"engines": {
